MyProject/force-app/main/default/objects/D_Mart__c/D_Mart__c.object-meta.xml
<CustomObject>
    <label>D Mart</label>
    <nameField>
        <label>D Mart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D Marts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>