MyProject/force-app/main/default/objects/D_Mart__c/fields/Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_No__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Bill No.</label>
    <type>AutoNumber</type>
</CustomField>