MyProject/force-app/main/default/objects/D_Mart__c/fields/Parking_Bill__c.field-meta.xml
<CustomField>
    <fullName>Parking_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parking Bill</label>
    <type>Checkbox</type>
</CustomField>