MyProject/force-app/main/default/objects/D_Mart__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rice, Dal, Flour, Oil</fullName>
            </value>
            <value>
                <fullName>Milk, Cheese, Juice, Curd</fullName>
            </value>
            <value>
                <fullName>T-Shirts, Jeans, Ethnic Wear</fullName>
            </value>
            <value>
                <fullName>Mobile, Laptop, Headphones</fullName>
            </value>
            <value>
                <fullName>Soap, Shampoo, Toothpaste</fullName>
            </value>
            <value>
                <fullName>Bed Sheets, Curtains, Lamps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>