MyProject/force-app/main/default/objects/D_Mart__c/fields/Total_Inventory_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Inventory_Value__c</fullName>
    <formula>Price__c * Stock_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Inventory Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>