MyProject/force-app/main/default/objects/D_Mart__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total__c</columns>
    <columns>Stock_Quantity__c</columns>
    <columns>Parking_Bill__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>